...
    val quotes: List<Quote> = listOf(
        Quote(
            id = 1,
            quote = "This is a quote",
            author = "AuthorAuthorAuthor",
            reference = "ReferenceReference",
            subject = "Subject",
            timestamp = System.currentTimeMillis()
        ),
        Quote(
            id = 1,
            quote = "This is a quote",
            author = "Author",
            reference = "ReferenceReference",
            subject = "Subject",
            timestamp = System.currentTimeMillis()
        ),
        Quote(
            id = 1,
            quote = "This is a quote",
            author = "Author",
            reference = "Reference",
            subject = "Subject",
            timestamp = System.currentTimeMillis()
        ),
        Quote(
            id = 1,
            quote = "This is a quote",
...
    onCreateBackup: () -> Unit
) {
    var showMenu by remember { mutableStateOf(false) }
    CenterAlignedTopAppBar(
        title = {
            Text(
                "Quotations",
                style = MaterialTheme.typography.headlineMedium.copy(
                    fontWeight = FontWeight.Bold
                ),
                modifier = Modifier.testTag("top_bar_title")
            )
        },
...
            IconButton(
                onClick = onAddClick,
                modifier = Modifier.testTag("top_bar_add_button")
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add Quotation...",
                    tint = MaterialTheme.colorScheme.primary
                )
            }
            Box {
                IconButton(
                    onClick = { showMenu = true },
...
    onShare: (Quote) -> Unit
) {
    var showMenu by remember { mutableStateOf(false) }
    CenterAlignedTopAppBar(
        title = {
            Text(
                "Quotation Details",
                style = MaterialTheme.typography.titleLarge.copy(
                    fontWeight = FontWeight.SemiBold
                ),
                modifier = Modifier.testTag("top_bar_title")
            )
        },
...
            IconButton(
                onClick = onBack,
                modifier = Modifier.testTag("top_bar_back_button")
            ) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Back to quotations",
                    tint = MaterialTheme.colorScheme.primary
                )
            }
        },
        actions = {
            IconButton(
...
            IconButton(
                onClick = onBackClick,
                modifier = Modifier.testTag("top_bar_back_button")
            ) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Back to Subjects",
                    tint = MaterialTheme.colorScheme.primary
                )
            }
        },
        actions = {
            IconButton(
...
            modifier = Modifier.testTag("bottom_sheet_title")
        )
        
        OutlinedTextField(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("quote_input"),
            minLines = 3,
            value = formState.quoteText,
            label = { Text("Quote Content") },
            onValueChange = { viewModel.updateQuoteText(it) },
            isError = formState.isQuoteError,
            shape = MaterialTheme.shapes.medium,
...
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.spacedBy(8.dp)
        ) {
            OutlinedTextField(
                modifier = Modifier
                    .weight(1f)
                    .testTag("author_input"),
                singleLine = true,
                value = formState.author,
                label = { Text("Author") },
                onValueChange = { viewModel.updateAuthor(it) },
                isError = formState.isAuthorError,
                shape = MaterialTheme.shapes.medium,
...
                    )
                }
            )
            OutlinedTextField(
                modifier = Modifier
                    .weight(1f)
                    .testTag("subject_input"),
                singleLine = true,
                value = formState.subject,
                label = { Text("Subject") },
                onValueChange = { viewModel.updateSubject(it) },
                isError = formState.isSubjectError,
                shape = MaterialTheme.shapes.medium,
...
            )
        }

        OutlinedTextField(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("reference_input"),
            singleLine = true,
            value = formState.reference,
            label = { Text("Reference (Book, Speech, etc.)") },
            onValueChange = { viewModel.updateReference(it) },
            isError = formState.isReferenceError,
            shape = MaterialTheme.shapes.medium,
...
                .height(56.dp)
                .testTag("bottom_sheet_save_button"),
            shape = MaterialTheme.shapes.large
        ) {
            Icon(Icons.Default.Save, contentDescription = null)
            Spacer(Modifier.width(8.dp))
            Text("Save Quote", style = MaterialTheme.typography.titleMedium)
        }
    }
}

@Composable
fun EditQuoteBottomSheet(
...
                .height(56.dp)
                .testTag("bottom_sheet_edit_button"),
            shape = MaterialTheme.shapes.large
        ) {
            Icon(Icons.Default.Save, contentDescription = null)
            Spacer(Modifier.width(8.dp))
            Text("Update Quote", style = MaterialTheme.typography.titleMedium)
        }
    }
}

@Composable
fun DeleteConfirmationDialog(
...
